[gd_scene load_steps=5 format=3 uid="uid://dapfuq8s8q4yk"]

[ext_resource type="Script" uid="uid://ci34qf7vlbacf" path="res://world/structures/station/neon_sign.gd" id="1_lmrlc"]
[ext_resource type="Material" uid="uid://cwl0lm0fhliup" path="res://world/structures/station/neon_sign_medium1.tres" id="2_o0sqn"]

[sub_resource type="PlaneMesh" id="PlaneMesh_dcus8"]
size = Vector2(4, 1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_lmrlc"]
data = PackedVector3Array(2, 0, 0.5, -2, 0, 0.5, 2, 0, -0.5, -2, 0, 0.5, -2, 0, -0.5, 2, 0, -0.5)

[node name="NeonSign" type="Node3D"]
script = ExtResource("1_lmrlc")
sign_texture = ExtResource("2_o0sqn")

[node name="Sign" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0)
mesh = SubResource("PlaneMesh_dcus8")

[node name="StaticBody3D" type="StaticBody3D" parent="Sign"]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sign/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_lmrlc")

[node name="Editor" type="CanvasLayer" parent="."]
layer = 2

[node name="Control" type="Control" parent="Editor"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sliders" type="VBoxContainer" parent="Editor/Control"]
layout_mode = 0
offset_right = 352.0
offset_bottom = 104.0

[node name="GlowControl" type="HBoxContainer" parent="Editor/Control/Sliders"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="Editor/Control/Sliders/GlowControl"]
layout_mode = 2
size_flags_horizontal = 0
text = "Glow"

[node name="HSlider" type="HSlider" parent="Editor/Control/Sliders/GlowControl"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0

[node name="FlickerControl" type="HBoxContainer" parent="Editor/Control/Sliders"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="Editor/Control/Sliders/FlickerControl"]
layout_mode = 2
size_flags_horizontal = 0
text = "Flicker"

[node name="HSlider" type="HSlider" parent="Editor/Control/Sliders/FlickerControl"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0

[node name="MinimumBrightnessControl" type="HBoxContainer" parent="Editor/Control/Sliders"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="Editor/Control/Sliders/MinimumBrightnessControl"]
layout_mode = 2
size_flags_horizontal = 0
text = "Minimum Brightness"

[node name="HSlider" type="HSlider" parent="Editor/Control/Sliders/MinimumBrightnessControl"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0

[node name="EnergyControl" type="HBoxContainer" parent="Editor/Control/Sliders"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="Editor/Control/Sliders/EnergyControl"]
layout_mode = 2
size_flags_horizontal = 0
text = "Energy"

[node name="HSlider" type="HSlider" parent="Editor/Control/Sliders/EnergyControl"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0

[node name="ColorPicker" type="ColorPicker" parent="Editor/Control/Sliders"]
layout_mode = 2

[connection signal="input_event" from="Sign/StaticBody3D" to="." method="_on_sign_input_event"]
[connection signal="mouse_entered" from="Sign/StaticBody3D" to="." method="_on_static_body_3d_mouse_entered"]
[connection signal="value_changed" from="Editor/Control/Sliders/GlowControl/HSlider" to="." method="_on_glow_value_changed"]
[connection signal="value_changed" from="Editor/Control/Sliders/FlickerControl/HSlider" to="." method="_on_flicker_value_changed"]
[connection signal="value_changed" from="Editor/Control/Sliders/MinimumBrightnessControl/HSlider" to="." method="_on_minimum_brightness_value_changed"]
[connection signal="value_changed" from="Editor/Control/Sliders/EnergyControl/HSlider" to="." method="_on_energy_value_changed"]
[connection signal="color_changed" from="Editor/Control/Sliders/ColorPicker" to="." method="_on_color_picker_color_changed"]
